--- a/kubeseal.yaml
+++ b/kubeseal.yaml
@@ -14,4 +14,9 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: kubeseal
-    
+  syncPolicy:
+        syncOptions:
+        - CreateNamespace=true
+        automated:
+          prune: false
+          selfHeal: true  
