--- a/kubeseal.yaml
+++ b/kubeseal.yaml
@@ -15,8 +15,9 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: kubeseal
   syncPolicy:
-        syncOptions:
-        - CreateNamespace=true
-        automated:
-          prune: false
-          selfHeal: true  
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+    
