--- a/kubeseal.yaml
+++ b/kubeseal.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     chart: sealed-secrets
-    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 1.16.1
     helm:
       releaseName: sealed-secrets
