--- a/k8s-infra/k8s-infra.yaml
+++ b/k8s-infra/k8s-infra.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/stromberg2/argocd.git
     targetRevision: HEAD
-    path: k8s-infra
+    path: k8s-infra/ingress-controller
   destination:
     server: https://kubernetes.default.svc
     namespace: k8s-infra
