quota for parameters

--- a/k8s-infra/ingress-controller/ingress-controller.yaml
+++ b/k8s-infra/ingress-controller/ingress-controller.yaml
@@ -16,8 +16,8 @@ spec:
         value: "ingress-controller"
       - name: "controller.replicaCount"
         value: "2"
-      - name: "controller.nodeSelector.beta"\.kubernetes\.io/os""
-        value: "linux"
+#      - name: "controller.nodeSelector.beta"\.kubernetes\.io/os""
+#        value: "linux"
       - name: "controller.service.externalTrafficPolicy"
         value: "local"
       - name: "controller.service.loadBalancerIP"
