--- a/k8s-infra/k8s-infra.yaml
+++ b/k8s-infra/k8s-infra.yaml
@@ -12,4 +12,9 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: k8s-infra
-	
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true  
