--- a/k8s-infra/k8s-infra.yaml
+++ b/k8s-infra/k8s-infra.yaml
@@ -8,13 +8,13 @@ spec:
   source:
     repoURL: https://github.com/stromberg2/argocd.git
     targetRevision: HEAD
-    path: k8s-infra/ingress-controller
+    path: k8s-infra
   destination:
     server: https://kubernetes.default.svc
     namespace: k8s-infra
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
     syncOptions:
     - CreateNamespace=true  
