--- a/k8s-infra/k8s-infra.yaml
+++ b/k8s-infra/k8s-infra.yaml
@@ -3,12 +3,17 @@ kind: Application
 metadata:
   name: k8s-infra
   namespace: argocd
+ # finalizers:
+ #   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
     repoURL: https://github.com/stromberg2/argocd.git
     targetRevision: HEAD
     path: k8s-infra
+    directory:
+     recurse: true
+     jsonnet: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: k8s-infra
