wrong user assigend identiy

--- a/k8s-infra/external-dns/azure-config-secret.yaml
+++ b/k8s-infra/external-dns/azure-config-secret.yaml
@@ -10,5 +10,6 @@ data:
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: azure-config-file  
+  name: azure-config-file
+  namespace: external-dns
   
