--- a/k8s-infra-apps/03-Ingress-with-ExternalDNS.yml
+++ b/k8s-infra-apps/03-Ingress-with-ExternalDNS.yml
@@ -8,7 +8,7 @@ spec:
   - host: eapp1.gsbonazure.de
     http:
       paths:
-      - path: /
+      - path: /app1
         pathType: Prefix
         backend:
           service:
