--- a/k8s-infra/cert-manager/clusterissuer.yaml
+++ b/k8s-infra/cert-manager/clusterissuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
@@ -12,3 +12,4 @@ spec:
       - http01:
           ingress:
             class: nginx
+            
