--- a/k8s-infra/helm-external-dns/external-dns.yaml
+++ b/k8s-infra/helm-external-dns/external-dns.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     chart: external-dns
-    repoURL: https://kubernetes.github.io/ingress-nginx
+    repoURL: https://github.com/stromberg2/gitchartrepo
     targetRevision: 0.11.0
     helm:
       releaseName: external-dns
