--- a/k8s-infra/external-dns/external-dns.yaml
+++ b/k8s-infra/external-dns/external-dns.yaml
@@ -29,6 +29,7 @@ roleRef:
 subjects: 
   - kind: ServiceAccount 
     name: external-dns 
+#    namespace: external-dns
     namespace: external-dns
 --- 
 apiVersion: apps/v1 
